--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
 <!-- titulo do site-->
     <link rel="shortcut icon" href="favicon.png"> 
 <!-- apenas um link pra add a imagem-->
+    <link href=" https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<!-- queria incluir uma nova fonte em meu projeto, para isso fui no site google fonts encontrei a fonte que eu desejava e a inclui nesse link em parelo adcionei a fonte no #main.css --  font-family: "Robot", sans-serif;-->
     <link rel="stylesheet" href="main.css"> 
 <!-- puxar o meu código CSS da minha folha de estilo interna a qual nomei nesse projeto de main.css-->
 </head>
 
 <body>
     <main>
-        <section>
+        <section id="product-overview">
             <h1>Get the freedom you deserve.</h1>
         </section>
-        <section>
-            <h1>Choose Your Plan</h1>
+        <section id="plans">
+            <h1 class="section-title">Choose Your Plan</h1>
+<!-- criei id e class para aplicar estilizações especificas para cada h1, os mesmos foram especificados em main.css-->
         </section>
 
     </main>
