resumo do modulo de intro

--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
 <!-- apenas um link pra add a imagem-->
     <link href=" https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 <!-- queria incluir uma nova fonte em meu projeto, para isso fui no site google fonts encontrei a fonte que eu desejava e a inclui nesse link em parelo adcionei a fonte no #main.css --  font-family: "Robot", sans-serif;-->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet" rel="stylesheet">
     <link rel="stylesheet" href="main.css"> 
 <!-- puxar o meu código CSS da minha folha de estilo interna a qual nomei nesse projeto de main.css-->
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
     <main>
         <section id="product-overview">
-            <h1>Get the freedom you deserve.</h1>
+            <h1 id="first-section-title">Get the freedom you deserve.</h1>
         </section>
         <section id="plans">
             <h1 class="section-title">Choose Your Plan</h1>
 <!-- criei id e class para aplicar estilizações especificas para cada h1, os mesmos foram especificados em main.css-->
+            <p>Make sure you get the most for your money!</p>
         </section>
 
     </main>
