--- a/deletar/index.html
+++ b/deletar/index.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>uHost</title>
-    <link rel="shortcut icon" href="favicon.png"> 
-    <link href=" https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css"> 
+    <link rel="shortcut icon" href="favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -28,7 +26,7 @@
                 <li class="main-nav__item">
                     <a href="customers/index.html">Customers</a>
                 </li>
-                <li class="main-nav__item main-nav__item--cta">
+                <li class="main-nav__item">
                     <a href="start-hosting/index.html">Start Hosting</a>
                 </li>
             </ul>
@@ -36,14 +34,12 @@
     </header>
     <main>
         <section id="product-overview">
-            <h1 id="first-section-title">Get the freedom you deserve.</h1>
+            <h1>Get the freedom you deserve.</h1>
         </section>
         <section id="plans">
             <h1 class="section-title">Choose Your Plan</h1>
-
             <p>Make sure you get the most for your money!</p>
         </section>
-
     </main>
 </body>
 
