--- a/01-more-on-selectors-1-start-code/index.html
+++ b/01-more-on-selectors-1-start-code/index.html
@@ -12,9 +12,9 @@
 <body>
     <nav>
         <a href="#intro" class="active">Intro</a>
-        <a href="#outro">Outro</a>
+        <a href="#outro">Other</a>
     </nav>
-    <section id="intro" class="main-section">
+    <section id="intro" class="main-section highLighted">
         <p>This is the intro section.</p>
     </section>
     <section id="outro" class="main-section">
