--- a/00-Init/index.html
+++ b/00-Init/index.html
@@ -109,8 +109,19 @@
                 </li>
             </ul>
         </section>
-
     </main>
+    <footer class="main-footer">
+        <nav>
+            <ul class="main-footer__links"> 
+                <li class="main-footer__link">
+                    <a href="#">Support</a>
+                </li>
+                <li class="main-footer__link">
+                    <a href="#">Terms of Use</a>
+                </li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 
 </html>
