--- a/00-Init/index.html
+++ b/00-Init/index.html
@@ -19,7 +19,7 @@
     <header class="main-header">
         <div>
             <a href="index.html" class="main-header__brand">
-                uHost
+                <img src="img/uhost-icon.png" alt="uHost - Your favorite hosting company">
             </a>
         </div>
         <nav class="main-nav">
