clearing the javascript code

--- a/00-uHost/customers/index.html
+++ b/00-uHost/customers/index.html
@@ -11,11 +11,28 @@
     <link rel="stylesheet" href="../shared.css">
     <link rel="stylesheet" href="customers.css">
 </head>
-
+<nav class="mobile-nav">
+    <ul class="mobile-nav__items">
+        <li class="mobile-nav__item">
+            <a href="packages/index.html">Packages</a>
+        </li>
+        <li class="mobile-nav__item">
+            <a href="customers/index.html">Customers</a>
+        </li>
+        <li class="mobile-nav__item mobile-nav__item--cta">
+            <a href="start-hosting/index.html">Start Hosting</a>
+        </li>
+    </ul>
+</nav>
 <body>
     <div class="backdrop"></div>
     <header class="main-header">
         <div>
+            <button class="toggle-button">
+                <span class="toggle-button__bar"></span>
+                <span class="toggle-button__bar"></span>
+                <span class="toggle-button__bar"></span>
+            </button>
             <a href="../index.html" class="main-header__brand">
                 <img src="../img/uhost-icon.png" alt="uHost - Your favorite hosting company">
             </a>
@@ -34,6 +51,19 @@
             </ul>
         </nav>
     </header>
+            <nav class="main-nav">
+            <ul class="main-nav__items">
+                <li class="main-nav__item">
+                    <a href="../packages/index.html">Packages</a>
+                </li>
+                <li class="main-nav__item">
+                    <a href="index.html">Customers</a>
+                </li>
+                <li class="main-nav__item main-nav__item--cta">
+                    <a href="../start-hosting/index.html">Start Hosting</a>
+                </li>
+            </ul>
+        </nav>
     <main>
         <div>
             <div class="testimonial" id="customer-1">
@@ -76,6 +106,7 @@
             </ul>
         </nav>
     </footer>
+    <script src="../shared.js" ></script>
 </body>
 
 </html>
