--- a/00-uHost/packages/index.html
+++ b/00-uHost/packages/index.html
@@ -5,19 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>uHost</title>
-    <link rel="shortcut icon" href="favicon.png"> 
+    <link rel="shortcut icon" href="../favicon.png"> 
     <link href=" https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../shared.css">
     <link rel="stylesheet" href="packages.css"> 
 </head>
-
+<nav class="mobile-nav">
+    <ul class="mobile-nav__items">
+        <li class="mobile-nav__item">
+            <a href="packages/index.html">Packages</a>
+        </li>
+        <li class="mobile-nav__item">
+            <a href="customers/index.html">Customers</a>
+        </li>
+        <li class="mobile-nav__item mobile-nav__item--cta">
+            <a href="start-hosting/index.html">Start Hosting</a>
+        </li>
+    </ul>
+</nav>
 <body>
     <div class="backdrop"></div>
     <div class="background"></div>
     <header class="main-header">
         <div>
+            <button class="toggle-button">
+                <span class="toggle-button__bar"></span>
+                <span class="toggle-button__bar"></span>
+                <span class="toggle-button__bar"></span>
+            </button>
             <a href="../index.html" class="main-header__brand">
                 <img src="../img/uhost-icon.png" alt="uHost - Your favorite hosting company">
             </a>
@@ -74,6 +91,7 @@
             </ul>
         </nav>
     </footer>
+    <script src="../shared.js" ></script>
 </body>
 
 </html>
