--- a/00-uHost/index.html
+++ b/00-uHost/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
+    <meta name="viewport" content="width-device-width, initial-scale=1.0"> <!--maximum-scale=2.0, minimum-scale=1.0" --> 
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png"> 
     <link href=" https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -13,7 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="main.css"> 
- 
 </head>
 
 <body>
